# Skribi-langage-source

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  test.sk  test.skrb  test1  test2  test3
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  something-else.md
.github/workflows/: rust.yml
benches/: general.rs
resources/test_programs/: addition.skrb  bool.skrb  complex.skrb  division.skrb  exit.skrb  ij.skrb  multiplication.skrb  operations.skrb  switch.skrb
resources/test_programs/algo/: fibo.skrb
resources/test_programs/cmp/: or_eq.skrb  simple.skrb
scr/: __init__.py
scr/skribi/: __init__.py
src/: __init__.py  ast.rs  execute.rs  file.rs  get_file_content.rs  interpret.rs  lexer.rs  lib.rs  main.rs  parse.rs  pre_run.rs  shell.py  skr_errors.rs  source.rs  tests.rs  tokens.rs  utils.rs
src/ast/: nodes.rs  visitors.rs
src/ast/nodes/: base.rs  branches.rs  calls.rs  conditions.rs  declarations.rs  deprecated.rs  expressions.rs  loops.rs  operations.rs  primitive_values.rs  statements.rs
src/ast/visitors/: compile.rs  pretty.rs
src/execute/: int.rs  ioi.rs  unit.rs
src/interpret/: native_call.rs  variables.rs
src/parse/: README.md  call.rs  calls.rs  conditions.rs  declarations.rs  glossary.md  nodes.rs  nums.rs
src/skribi/: __init__.py  custom_exception.py  debug.py  main.py  parser.py  program.py  skribi_file.py  tokens.py  type_model.py  variables_and_types.py
src/tests/: execute_tests.rs  full_evaluation_tests.rs  parse_tests.rs  programs.rs  tokens_tests.rs
src/tokenize/: mod.rs  token_types.rs
src/tokens/: tests.rs
(+15 files in other folders)
