[package]
name = "skribi_language_source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "general"
harness = false

[dependencies]
thiserror = "1.0"
colored = "3.0.0"
